@@ -1,3 +1,5 @@
+* BUG#6932 Keep initial maturity date if dunning procedure is based on payment date
+
 Version 1.14 - 2017-11-09
 * FEA#7097 Add default dunning procedure
 * BUG#6617 Void contracts that were never paid
